--- a/docker_sql/data_exploratory.ipynb
+++ b/docker_sql/data_exploratory.ipynb
@@ -390,6 +390,447 @@
     "    \n",
     "    print('inserted another chunk..., took %.3f second' % (t_end - t_start))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31aa7cdf-330c-4e5b-bcd4-e41ed22e4078",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f66546b-555a-40ee-983d-5249178c5931",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2d9858a-6c01-4296-9863-3615d78d3a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70b5d859-6f14-48a0-b1f3-62d20144f005",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3e2b50-a131-4bbf-b077-c4dbfecd1248",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d2b149c-45d9-40fe-893c-948239f0df82",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e08d1b79-ef3d-4cc5-bd71-f554def5e5c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "taxi_zone = pd.read_csv(\"./taxi_zone_lookup.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a622b564-c1e1-4a9a-a9e1-4a40031e0edb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Zone</th>\n",
+       "      <th>service_zone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>EWR</td>\n",
+       "      <td>Newark Airport</td>\n",
+       "      <td>EWR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>Jamaica Bay</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>Allerton/Pelham Gardens</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>Yellow Zone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Staten Island</td>\n",
+       "      <td>Arden Heights</td>\n",
+       "      <td>Boro Zone</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LocationID        Borough                     Zone service_zone\n",
+       "0           1            EWR           Newark Airport          EWR\n",
+       "1           2         Queens              Jamaica Bay    Boro Zone\n",
+       "2           3          Bronx  Allerton/Pelham Gardens    Boro Zone\n",
+       "3           4      Manhattan            Alphabet City  Yellow Zone\n",
+       "4           5  Staten Island            Arden Heights    Boro Zone"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "taxi_zone.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4da18a4b-2128-4989-b10c-2f1f7606c4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_iter = pd.read_csv(\"./green_tripdata_2019-09.csv.gz\", iterator=True,chunksize=100000)\n",
+    "df = next(df_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "445c782e-9796-400f-a79c-487b703f6234",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>lpep_pickup_datetime</th>\n",
+       "      <th>lpep_dropoff_datetime</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>ehail_fee</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>trip_type</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-09-01 00:10:53</td>\n",
+       "      <td>2019-09-01 00:23:46</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>65</td>\n",
+       "      <td>189</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>14.16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-09-01 00:31:22</td>\n",
+       "      <td>2019-09-01 00:44:37</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>97</td>\n",
+       "      <td>225</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.20</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>13.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-09-01 00:50:24</td>\n",
+       "      <td>2019-09-01 01:03:20</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>61</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>13.30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-09-01 00:27:06</td>\n",
+       "      <td>2019-09-01 00:33:22</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>145</td>\n",
+       "      <td>112</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.73</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>10.30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2019-09-01 00:43:23</td>\n",
+       "      <td>2019-09-01 00:59:54</td>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>112</td>\n",
+       "      <td>198</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.06</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>18.36</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID lpep_pickup_datetime lpep_dropoff_datetime store_and_fwd_flag  \\\n",
+       "0         2  2019-09-01 00:10:53   2019-09-01 00:23:46                  N   \n",
+       "1         2  2019-09-01 00:31:22   2019-09-01 00:44:37                  N   \n",
+       "2         2  2019-09-01 00:50:24   2019-09-01 01:03:20                  N   \n",
+       "3         2  2019-09-01 00:27:06   2019-09-01 00:33:22                  N   \n",
+       "4         2  2019-09-01 00:43:23   2019-09-01 00:59:54                  N   \n",
+       "\n",
+       "   RatecodeID  PULocationID  DOLocationID  passenger_count  trip_distance  \\\n",
+       "0           1            65           189                5           2.00   \n",
+       "1           1            97           225                5           3.20   \n",
+       "2           1            37            61                5           2.99   \n",
+       "3           1           145           112                1           1.73   \n",
+       "4           1           112           198                1           3.42   \n",
+       "\n",
+       "   fare_amount  extra  mta_tax  tip_amount  tolls_amount  ehail_fee  \\\n",
+       "0         10.5    0.5      0.5        2.36           0.0        NaN   \n",
+       "1         12.0    0.5      0.5        0.00           0.0        NaN   \n",
+       "2         12.0    0.5      0.5        0.00           0.0        NaN   \n",
+       "3          7.5    0.5      0.5        1.50           0.0        NaN   \n",
+       "4         14.0    0.5      0.5        3.06           0.0        NaN   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  payment_type  trip_type  \\\n",
+       "0                    0.3         14.16             1          1   \n",
+       "1                    0.3         13.30             2          1   \n",
+       "2                    0.3         13.30             2          1   \n",
+       "3                    0.3         10.30             1          1   \n",
+       "4                    0.3         18.36             1          1   \n",
+       "\n",
+       "   congestion_surcharge  \n",
+       "0                   0.0  \n",
+       "1                   0.0  \n",
+       "2                   0.0  \n",
+       "3                   0.0  \n",
+       "4                   0.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8b31f260-0094-4c0d-828b-e73bb4fae5a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATE TABLE \"green_taxi_data\" (\n",
+      "\"VendorID\" INTEGER,\n",
+      "  \"lpep_pickup_datetime\" TEXT,\n",
+      "  \"lpep_dropoff_datetime\" TEXT,\n",
+      "  \"store_and_fwd_flag\" TEXT,\n",
+      "  \"RatecodeID\" INTEGER,\n",
+      "  \"PULocationID\" INTEGER,\n",
+      "  \"DOLocationID\" INTEGER,\n",
+      "  \"passenger_count\" INTEGER,\n",
+      "  \"trip_distance\" REAL,\n",
+      "  \"fare_amount\" REAL,\n",
+      "  \"extra\" REAL,\n",
+      "  \"mta_tax\" REAL,\n",
+      "  \"tip_amount\" REAL,\n",
+      "  \"tolls_amount\" REAL,\n",
+      "  \"ehail_fee\" REAL,\n",
+      "  \"improvement_surcharge\" REAL,\n",
+      "  \"total_amount\" REAL,\n",
+      "  \"payment_type\" INTEGER,\n",
+      "  \"trip_type\" INTEGER,\n",
+      "  \"congestion_surcharge\" REAL\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.io.sql.get_schema(df, name=\"green_taxi_data\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "193958a2-f1b0-4046-94fa-3c128c30c7da",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "NDFrame.to_sql() missing 1 required positional argument: 'con'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mto_sql\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgreen_taxi_data\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.12/site-packages/pandas/util/_decorators.py:333\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    327\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m>\u001b[39m num_allow_args:\n\u001b[1;32m    328\u001b[0m     warnings\u001b[38;5;241m.\u001b[39mwarn(\n\u001b[1;32m    329\u001b[0m         msg\u001b[38;5;241m.\u001b[39mformat(arguments\u001b[38;5;241m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[1;32m    330\u001b[0m         \u001b[38;5;167;01mFutureWarning\u001b[39;00m,\n\u001b[1;32m    331\u001b[0m         stacklevel\u001b[38;5;241m=\u001b[39mfind_stack_level(),\n\u001b[1;32m    332\u001b[0m     )\n\u001b[0;32m--> 333\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: NDFrame.to_sql() missing 1 required positional argument: 'con'"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "engine = create_engine('postgresql://root:root@localhost:5432/ny_taxi')\n"
+   ]
   }
  ],
  "metadata": {
